--- a/project.html
+++ b/project.html
@@ -85,7 +85,7 @@
       <br><br><br>
       <div>
         <h1 class="my-4 font-normal" style="font-weight: 700;
-      font-size: 8vh;">the story</h1>
+      font-size: 8vh; color: #757575">the story</h1>
         <p class="leading-normal mb-2 text-base md:text-lg xl:text-xl ">
           Trendy Dots is a hobby project developing fun applications for data science, data visualization and user
           experience.
@@ -111,18 +111,20 @@
 
     <div class="w-full rounded flex flex-col justify-between items-center lg:items-start bg-white" style="z-index:2; padding: 2%; padding-left: 6%; padding-right: 6%;
       ">
-      <div style=" z-index: 3;" class="flex flex-col items-center text-sm font-bold ">
+      <div style=" z-index: 3;" class="flex flex-col items-center text-sm font-bold pt-4">
         <h1 class="my-4 font-normal" style="font-weight: 700;
-      font-size: 8vh;">my workflow</h1>
+      font-size: 8vh; color: #757575;">my workflow</h1>
         <br><br>
         <div class="flex lg:flex-row flex-col">
-          <div class="flex flex-col lg:flex-row mb-4">
-            <div class=" flex w-full lg:w-1/4 justify-center text-center items-center">
-              <i class="material-icons-round" style="font-size: 4em; color: #F2D024;">emoji_objects</i>
-            </div>
-            <div class="flex w-full lg:w-3/4 flex-col justify-center text-center">
+          <div class="flex flex-col w-full lg:w-1/3  items-center  mb-4">
+            <div class="flex justify-center text-center items-center">
+              <img src="./mw1.png" style="max-height:250px" alt=""> </div>
+            <div class="flex flex-col justify-center text-left px-4">
               <h3 class="mb-2">1. a big idea - early stage prototyping</h3>
-              <p class="leading-normal mb-2">I start brainstorming for ideas until the light bulb shines.
+              <p class="leading-normal mb-2 text-grey-darkest" style="font-weight: 300;">I start brainstorming for ideas
+                until the
+                light
+                bulb shines.
                 then, using the <a href="https://www.gv.com/sprint/" class="text-black" target="_blank">design sprint
                   method</a>, I
                 challenge
@@ -130,13 +132,13 @@
             </div>
           </div>
 
-          <div class="flex flex-col lg:flex-row mb-4">
-            <div class=" flex w-full lg:w-1/4 justify-center text-center items-center">
-              <i class="material-icons-round" style="font-size: 4em; color: #F2D024;">language</i>
+          <div class="flex flex-col w-full lg:w-1/3 items-center mb-4">
+            <div class=" flex justify-center text-center items-center">
+              <img src="./mw2.png" style="max-height:250px" alt="">
             </div>
-            <div class="flex w-full lg:w-3/4 flex-col justify-center text-center lg:text-left">
+            <div class="flex flex-col justify-center text-left px-4">
               <h3 class="mb-2"> 2. will it work online? - web development </h3>
-              <p class="leading-normal mb-2">
+              <p class="leading-normal mb-2 text-grey-darkest" style="font-weight: 300;">
                 A large part of my ambition is to create a toolset the functions 100% online, without the need for
                 complicated
                 installations, or configurations.
@@ -147,13 +149,13 @@
             </div>
           </div>
 
-          <div class="flex flex-col lg:flex-row mb-4">
-            <div class=" flex w-full lg:w-1/4 justify-center text-center items-center">
-              <i class="material-icons-outlined" style="font-size: 4em; color: #F2D024;">contact_support</i>
+          <div class="flex flex-col w-full lg:w-1/3 mb-4">
+            <div class=" flex justify-center text-center items-center">
+              <img src="./mw3.png" style="max-height:250px" alt="">
             </div>
-            <div class="flex w-full lg:w-3/4 flex-col justify-center text-center lg:text-left">
+            <div class="flex flex-col justify-center text-left px-4">
               <h3 class="mb-2"> 3. can I do better? - analytics and feedback based improvements </h3>
-              <p class="leading-normal mb-2">
+              <p class="leading-normal mb-2 text-grey-darkest" style="font-weight: 300;">
                 Here is where your opinons and contributions are put to good use. I encourage yout to become an active
                 <b>patron</b>
                 Please write your feedback and improvement suggestions. I will consider your desired changes.
@@ -165,26 +167,27 @@
 
     </div>
 
-    <div class="w-full flex flex-col items-center justify-center flex overflow-hidden">
-      <a href="https://twitter.com/trendydots" target="_blank"
-        style="text-decoration: none; color: black; float: right;">
-        <img src="twitter_black.png" style="vertical-align: middle; height: 1em">
-        @trendydots
-      </a>
-    </div>
   </section>
 
 
   <!-- support-->
-  <section class="font-sans m-auto w-full" style="margin-top: 50px; margin-bottom: 50px;">
+  <section class="font-sans m-auto w-full" style="margin-top: 50px; background: #F5F5F5;">
     <div class="flex flex-col sm:flex-row flex-wrap items-center justify-center">
-      <div style=" z-index: 3; background: #F5F5F5;"
-        class="w-full p-8 sm:w-1/2 flex flex-col items-left md:shadow-md bg-white text-sm font-bold md:rounded">
+      <div style=" z-index: 3;" class="w-full p-8 sm:w-1/2 flex flex-col items-left text-sm font-bold md:rounded">
+
+        <div class="w-full flex flex-col items-center justify-center my-8">
+          <a href="https://twitter.com/trendydots" target="_blank"
+            style="text-decoration: none; color: black; float: right;">
+            <img src="twitter_black.png" style="vertical-align: middle; height: 1em">
+            @trendydots
+          </a>
+        </div>
+
         <h1 class="leading-normal mb-2 text-center te">
           Support the project
         </h1>
         <br><br>
-        <div class="flex md:flex-row flex-col items-center justify-center">
+        <div class="flex md:flex-row flex-col items-center justify-center mb-8">
           <div class="flex flex-col ">
             <a class="btn bg-white border border-red cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow items-center"
               href="https://www.patreon.com/bePatron?u=14590376" target="_blank" style="white-space: nowrap;">
@@ -208,10 +211,11 @@
   </section>
 
   <!-- Projects -->
-  <section class="mt-16 font-sans w-full bg-white p-8">
+  <section class="font-sans w-full bg-white p-8">
     <div class="text-center">
       <h1 class="my-4 font-normal" style="font-weight: 700;
-      font-size: 6vh;">the <span class="font-bold">td<span style="color:#F2D024">.</span></span> toolset
+      font-size: 6vh; color:#757575">the <span class="font-bold text-black">td<span
+            style="color:#F2D024">.</span></span> toolset
       </h1>
     </div>
   </section>
@@ -227,7 +231,7 @@
       <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
         <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">web development</label>
         <h2 class="my-4 font-normal font-bold">td<span style="color:#F2D024">.</span> web-stitiches</h2>
-        <p class="leading-normal mb-4 text-grey-dark">
+        <p class="leading-normal mb-4 text-grey-darkest">
           A web application that helps you rapidly design a landing page or an editorial website.
           Using Google Charts, the data visualization components make it easy to express knowledge in beautiful web
           pages.
@@ -249,7 +253,7 @@
         <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">natural language
           processing</label>
         <h2 class="my-4 font-normal font-bold">td<span style="color:#F2D024">.</span> nlp research </h2>
-        <p class="leading-normal mb-4 text-grey-dark">
+        <p class="leading-normal mb-4 text-grey-darkest">
           A series of experiments around AI text processing. Summarizing language independent texts, extracting tokens,
           hashtag autosuggest and so much more.
           <br><br>
@@ -275,7 +279,7 @@
       <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
         <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">behavioural economics</label>
         <h2 class="my-4 font-normal font-bold">td<span style="color:#F2D024">.</span> trends research</h2>
-        <p class="leading-normal mb-4 text-grey-dark">
+        <p class="leading-normal mb-4 text-grey-darkest">
           The td<span style="color:#F2D024">.</span> trends research platform platform that aims to offer an intuitive,
           easy to use way for getting informed about the
           things that matter.
@@ -299,7 +303,7 @@
         <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">Volunteering</label>
         <img class="my-4" style="height: 3em;" src="./d4g.png" alt="natural language processing">
 
-        <p class="leading-normal mb-4 text-grey-dark">
+        <p class="leading-normal mb-4 text-grey-darkest">
           Helping teams of data scientists, developers
           and designers working with NGOs and social enterprises to solve complex challenges and identify new
           social impact opportunities.
