--- a/web-stitches/index.html
+++ b/web-stitches/index.html
@@ -13,6 +13,10 @@
   <!-- JQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
+  <!-- EU Cookies -->
+  <link rel="stylesheet" type="text/css" href="../css/jquery-eu-cookie-law-popup.css" />
+  <script src="../js/jquery-eu-cookie-law-popup.js"></script>
+
   <!--Load Google Charts via the AJAX API-->
   <script type="text/javascript" src=https://www.gstatic.com/charts/loader.js> </script> <script>
     $(window).resize(function () {
@@ -53,6 +57,7 @@
 
     </ul>
   </nav>
+
   <!-- features-1 -->
   <section
     class="my-8 lg:my-16 font-sans w-full m-auto flex flex-col lg:flex-row text-center justify-center items-center"
@@ -180,6 +185,38 @@
     </div>
   </section>
 
+
+  <footer class="font-sans bg-white pb-8 px-4" style="z-index: 4">
+    <div class="mx-auto max-w-xl overflow-hidden flex flex-col md:flex-row justify-between items-center">
+      <p class="inline-block py-2 px-3 text-center md:text-left"> ©2019 <strong class="">trendydots.com</strong> <br>
+        All rights reserved.</p>
+
+      <ul class="text-sm text-grey-dark list-reset flex items-center">
+        <li><a href="../privacy-statement.html" target="_blank" class="inline-block py-2 px-3 text-black">Privacy
+            statement</a></li>
+        <li><a href="../terms-of-service.html" target="_blank" class="inline-block py-2 px-3 text-black">Terms of
+            service</a>
+        </li>
+        <li><a href="../imprint.html" target="_blank" class="inline-block py-2 px-3 text-black">
+            Impressum</a>
+        </li>
+      </ul>
+    </div>
+  </footer>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113784035-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-113784035-1');
+
+  </script>
 </body>
 
 </html>
