--- a/web-stitches/index.html
+++ b/web-stitches/index.html
@@ -76,8 +76,7 @@
       </a>
       <br><br>
       <iframe class="w-full rounded shadow-md" src="https://www.youtube.com/embed/frEiVOU1dak" frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
-        style="height: 450px; max-width: 790px;"></iframe>
+        allow="autoplay; gyroscope;" allowfullscreen style="height: 450px; max-width: 790px;"></iframe>
       <br><br>
 
       <h3 class="leading-normal mb-4 text-grey-darkest text-center p-8">
